Created child process, implemented IPC via pipe to communicate fire location and number of resources to fight the fire.

--- a/cmpsc472Project2.ipynb
+++ b/cmpsc472Project2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLnepa6wUFP6d39xdEBabv",
+      "authorship_tag": "ABX9TyNyso8tX1q/Ts0s3iyeHMvB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -124,6 +124,7 @@
         "#include <sys/time.h>\n",
         "#include <sys/resource.h>\n",
         "#include <time.h>\n",
+        "#include <stdbool.h>\n",
         "\n",
         "/*\n",
         "TODO:\n",
@@ -135,6 +136,8 @@
         "- use semaphores/mutexes to lock critical sections\n",
         "- have logic for extinguishing wildfires, add resources back to global resource pool when a fire is extinguished\n",
         "*/\n",
+        "\n",
+        "int global_resources = 50;\n",
         "\n",
         "struct Landscape {\n",
         "    int rows;\n",
@@ -182,6 +185,13 @@
         "\n",
         "\n",
         "int main() {\n",
+        "  // Create pipes for IPC\n",
+        "  int pipe_fd[2];\n",
+        "  if (pipe(pipe_fd) == -1) {\n",
+        "    perror(\"pipe\");\n",
+        "    exit(EXIT_FAILURE);\n",
+        "  }\n",
+        "\n",
         "  // Define number of rows\n",
         "  int rows = 20;\n",
         "  // Define number of columns\n",
@@ -216,6 +226,79 @@
         "    sleep(waitTime);\n",
         "  }\n",
         "\n",
+        "\n",
+        "/*\n",
+        "Note: How to use a child and parent process. Have the child process set a boolean flag value equal to true (1) after it completes searching through the landscape. Then have the child process sleep.\n",
+        "While the child is searching, it should communicate the coordinates, priority, and number of resources to the parent process. While the child process is sleeping, call wait().\n",
+        "Maybe have the parent process execute a while loop. While completeSearch = false, use continue statement, unless a fire is being communicated via IPC. Once the boolean flag is true, exit the loop, call wait()\n",
+        "*/\n",
+        "\n",
+        "\n",
+        "  // Now that all fires are set, create a child process to search for fires\n",
+        "  pid_t child_pid = fork();\n",
+        "  if (child_pid == 0) {\n",
+        "    // Counter to iterate through fires array\n",
+        "    int k = 0;\n",
+        "    // Search for fires in the landscape.\n",
+        "    // If one is found, use IPC to communicate that with the parent process.\n",
+        "    // Close read end of pipe\n",
+        "    close(pipe_fd[0]);\n",
+        "    // Search landscape for fires\n",
+        "    for (int i = 0; i < rows; i++) {\n",
+        "      for (int j = 0; j < columns; j++) {\n",
+        "        if (landscape[i][j] == 1) {\n",
+        "          // Communicate these coordinates to parent process\n",
+        "          write(pipe_fd[1], &i, sizeof(i));\n",
+        "          write(pipe_fd[1], &j, sizeof(j));\n",
+        "\n",
+        "          // Communicate priority to parent process\n",
+        "          //write(pipe_fd[1], &fires[k].priority, sizeof(fires[k].priority));\n",
+        "\n",
+        "          // Communicate number of resources to parent process\n",
+        "          write(pipe_fd[1], &fires[k].requiredResources, sizeof(fires[k].requiredResources));\n",
+        "          // Increment counter to get required resources for next fire\n",
+        "          k++;\n",
+        "        }\n",
+        "      }\n",
+        "    }\n",
+        "    // After child finishes search of landscape, notify the parent\n",
+        "    int complete = -1;\n",
+        "    write(pipe_fd[1], &complete, sizeof(-1));\n",
+        "    write(pipe_fd[1], &complete, sizeof(-1));\n",
+        "\n",
+        "    // Close write end of pipe\n",
+        "    close(pipe_fd[1]);\n",
+        "\n",
+        "  } else if (child_pid > 0) {\n",
+        "    // Parent process\n",
+        "    // Variables to store the row, column, requiredResources passed from child process\n",
+        "    int r, c, rr;\n",
+        "    // Close write end of pipe\n",
+        "    close(pipe_fd[1]);\n",
+        "\n",
+        "    // While child process searches for fires, listen for IPC from child process\n",
+        "    while (true) {\n",
+        "      read(pipe_fd[0], &r, sizeof(r));\n",
+        "      printf(\"Fire row: %d\\n\", r);\n",
+        "      read(pipe_fd[0], &c, sizeof(c));\n",
+        "      printf(\"Fire col: %d\\n\", c);\n",
+        "      read(pipe_fd[0], &rr, sizeof(rr));\n",
+        "      printf(\"Num of resources: %d\\n\", rr);\n",
+        "      printf(\"\\n\");\n",
+        "\n",
+        "      if (r == -1 && c == -1) {\n",
+        "        // Child process has finished searching for fires\n",
+        "        break;\n",
+        "      }\n",
+        "    }\n",
+        "    // Wait to ensure child process has finished executing.\n",
+        "    wait(NULL);\n",
+        "\n",
+        "  } else {\n",
+        "    perror(\"Failed to create child process.\");\n",
+        "    exit(EXIT_FAILURE);\n",
+        "  }\n",
+        "\n",
         "  return 0;\n",
         "}"
       ],
@@ -224,9 +307,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J7hlMHoPiV1J",
-        "outputId": "fab2cae3-169a-4bc5-8045-be80b6fe256b"
+        "outputId": "17f86993-a79e-4ecf-a5de-56c4fc5c8154"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -249,16 +332,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OBS6ZAFmimbd",
-        "outputId": "2740a56c-7f1d-4b31-919a-92cc902d8521"
+        "outputId": "54e9e9a3-5673-43df-b699-eac0f52adbd8"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "array value at position 19,5: 1\n",
-            "Fire has priority 13 and requires 16 resources.\n",
+            "array value at position 13,15: 1\n",
+            "Fire has priority 17 and requires 8 resources.\n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
@@ -272,16 +355,19 @@
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
-            "0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "\n",
-            "array value at position 14,2: 1\n",
-            "Fire has priority 11 and requires 10 resources.\n",
+            "array value at position 2,10: 1\n",
+            "Fire has priority 5 and requires 9 resources.\n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
@@ -292,24 +378,19 @@
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
-            "0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
-            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
-            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
-            "0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "\n",
-            "array value at position 1,12: 1\n",
-            "Fire has priority 12 and requires 1 resources.\n",
-            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
-            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, \n",
+            "array value at position 10,13: 1\n",
+            "Fire has priority 10 and requires 11 resources.\n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
-            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
@@ -317,22 +398,22 @@
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
-            "0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
-            "0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "\n",
-            "array value at position 14,18: 1\n",
-            "Fire has priority 18 and requires 5 resources.\n",
-            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
-            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, \n",
+            "array value at position 16,1: 1\n",
+            "Fire has priority 8 and requires 19 resources.\n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
-            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
@@ -340,22 +421,22 @@
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
-            "0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
-            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
-            "0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "\n",
-            "array value at position 19,15: 1\n",
-            "Fire has priority 10 and requires 6 resources.\n",
+            "array value at position 1,11: 1\n",
+            "Fire has priority 2 and requires 7 resources.\n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
-            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, \n",
-            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
-            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
-            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
@@ -363,14 +444,40 @@
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
-            "0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
-            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
-            "0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, \n",
+            "\n",
+            "Fire row: 1\n",
+            "Fire col: 11\n",
+            "Num of resources: 8\n",
+            "\n",
+            "Fire row: 2\n",
+            "Fire col: 10\n",
+            "Num of resources: 9\n",
+            "\n",
+            "Fire row: 10\n",
+            "Fire col: 13\n",
+            "Num of resources: 11\n",
+            "\n",
+            "Fire row: 13\n",
+            "Fire col: 15\n",
+            "Num of resources: 19\n",
+            "\n",
+            "Fire row: 16\n",
+            "Fire col: 1\n",
+            "Num of resources: 7\n",
+            "\n",
+            "Fire row: -1\n",
+            "Fire col: -1\n",
+            "Num of resources: 7\n",
             "\n"
           ]
         },
@@ -380,7 +487,7 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 17
         }
       ]
     }
