Fixed comment formatting

--- a/cmpsc472Project2.ipynb
+++ b/cmpsc472Project2.ipynb
@@ -211,7 +211,7 @@
         "  int landscapeGrid[landscape -> rows][landscape -> columns];\n",
         "  // setting the array to the landscape struct\n",
         "  landscape -> grid = landscapeGrid;\n",
-        "  // Fill array with 0's\n",
+        "  // Fill array with 0s\n",
         "  for (int i = 0; i < landscape -> rows; i++)\n",
         "  {\n",
         "      for (int j = 0; j < landscape -> columns; j++)\n",
