improved git script

--- a/cmpsc472Project2.ipynb
+++ b/cmpsc472Project2.ipynb
@@ -35,9 +35,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jRppN4fRf_mg",
-        "outputId": "7aadf3d0-276f-45cb-b8c6-b596a7d973bc"
+        "outputId": "5a8fed10-785a-46cd-9839-8a9cf2483805"
       },
-      "execution_count": 1,
+      "execution_count": 103,
       "outputs": [
         {
           "output_type": "stream",
@@ -55,58 +55,31 @@
     {
       "cell_type": "code",
       "source": [
-        "!git clone https://github.com/Gregrs400/cmpsc472Project2.git"
+        "%%bash\n",
+        "cd\n",
+        "ls\n",
+        "if [ -d  \"cmpsc472Project2\" ]; then\n",
+        "cd cmpsc472Project2\n",
+        "git pull\n",
+        "else\n",
+        "git clone https://github.com/Gregrs400/cmpsc472Project2.git;\n",
+        "fi"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "CwR3W5EigKvY",
-        "outputId": "20474ac8-efc5-4015-fc79-9ea264c0b5ab"
+        "outputId": "661dd624-8537-4acf-be7b-586a6c3cb08f"
       },
-      "execution_count": 2,
+      "execution_count": 127,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'cmpsc472Project2'...\n",
-            "remote: Enumerating objects: 33, done.\u001b[K\n",
-            "remote: Counting objects: 100% (33/33), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (31/31), done.\u001b[K\n",
-            "remote: Total 33 (delta 9), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (33/33), 14.19 KiB | 484.00 KiB/s, done.\n",
-            "Resolving deltas: 100% (9/9), done.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%cd /content/cmpsc472Project2\n",
-        "!git pull origin set-fire"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "P63-msTUhLbj",
-        "outputId": "4404c8b0-b40d-4716-9cbe-158c91eab513"
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/cmpsc472Project2\n",
-            "From https://github.com/Gregrs400/cmpsc472Project2\n",
-            " * branch            set-fire   -> FETCH_HEAD\n",
-            "Updating 56429a1..a2094e5\n",
-            "Fast-forward\n",
-            " cmpsc472Project2.ipynb | 419 \u001b[32m++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\u001b[m\u001b[31m---\u001b[m\n",
-            " 1 file changed, 404 insertions(+), 15 deletions(-)\n"
+            "cmpsc472Project2\n",
+            "Already up to date.\n"
           ]
         }
       ]
@@ -324,7 +297,7 @@
         "id": "J7hlMHoPiV1J",
         "outputId": "7ac783c0-3f4b-4d1a-acc4-c8320998c7c0"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,7 +322,7 @@
         "id": "OBS6ZAFmimbd",
         "outputId": "c438f3df-b6c4-4071-fb0e-3a5c164840e6"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
