added Resource struct

--- a/cmpsc472Project2.ipynb
+++ b/cmpsc472Project2.ipynb
@@ -72,6 +72,13 @@
         "  int col;\n",
         "};\n",
         "\n",
+        "struct Resource {\n",
+        "    int currentRow;\n",
+        "    int currentCol;\n",
+        "    int assignedFireRow;\n",
+        "    int assignedFireCol;\n",
+        "};\n",
+        "\n",
         "struct ThreadArgs {\n",
         "  int beginRow;\n",
         "  int endRow;\n",
@@ -436,7 +443,7 @@
         "id": "4HHGtrnGg86s",
         "outputId": "b82a0867-c4a3-4ce9-c980-fc9252b19d84"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -461,7 +468,7 @@
         "id": "uwJy7T6riA0U",
         "outputId": "a35fc4d4-ca4c-4ade-c8f2-9a034ed72dd4"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
